// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Credit should only render its body 1`] = `
<div>
  <p>
    Only this will be rendered.
  </p>
</div>
`;

exports[`Credit should render an external credit 1`] = `
<div>
  https://curiousprogrammer.dev
  Curious Programmer
</div>
`;

exports[`Credit should render an internal credit 1`] = `
<div>
  /blog
  Curious Programmer
</div>
`;

exports[`Credit should use the title for its empty body 1`] = `
<div>
  Use me instead.
</div>
`;
